--- a/package.json
+++ b/package.json
@@ -22,10 +22,15 @@
     "@angular/platform-browser-dynamic": "~13.3.10",
     "@angular/router": "~13.3.10",
     "@fullcalendar/angular": "^5.11.0",
+    "@fullcalendar/bootstrap5": "^5.11.0",
     "@fullcalendar/daygrid": "^5.11.0",
+    "@fullcalendar/interaction": "^5.11.0",
     "@fullcalendar/list": "^5.11.0",
     "@fullcalendar/timegrid": "^5.11.0",
+    "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.3",
     "firebase": "^9.8.2",
+    "html-entities": "^2.3.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
