--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/flex-layout": "^13.0.0-beta.38",
     "@angular/forms": "~13.3.10",
     "@angular/material": "^13.3.8",
+    "@angular/material-moment-adapter": "^13.3.9",
     "@angular/platform-browser": "~13.3.10",
     "@angular/platform-browser-dynamic": "~13.3.10",
     "@angular/router": "~13.3.10",
@@ -32,6 +33,7 @@
     "bootstrap-icons": "^1.8.3",
     "firebase": "^9.8.2",
     "html-entities": "^2.3.3",
+    "moment": "^2.29.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
